fixed checkbox spacing

--- a/src/styles/AddRestaurant.scss
+++ b/src/styles/AddRestaurant.scss
@@ -30,3 +30,7 @@
     margin: 0 .5em;
   }
 }
+
+.form-check-label {
+  padding-right: .5em;
+}
